--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
         <h2>Net Salary Calculator</h2> 
 <!-- input field prompting user for basic salary, linking value to JS fucntion using id = "basic-salary" -->         
-        <input type="number" id="basic-salary" placeholder="Enter salary">
+        <input type="number" id="basic-salary" placeholder="Enter monthly salary">
 <!-- submit button that calls function netSalaryClaculator when clicked -->         
-        <button onclick="netSalaryCalculator">Submit</button>
+        <button onclick="netSalaryCalculator()">Submit</button>
 <!-- paragraph element to display net-salary from JS function  --> 
         <p id="net-salary"></p>
 
