--- a/Speed Detector/index.html
+++ b/Speed Detector/index.html
@@ -10,12 +10,14 @@
 <body>
     <div class="box">
         <h1>Speed Detector</h1>
-        <p>Speed</p>
-        <!-- input field that links value to JS using an id = "speed" -->        
-        <input type="number" id = "speed" placeholder="Enter speed" min="0">
-        <!-- button that calls JS function speedChecker() when clicked  -->       
+        <span>Enter Speed</span>
+<!-- input field that links value to JS using an id = "speed" -->
+        <input type="number" id = "speed" min="0" max="300">
+<!-- button that calls JS function speedChecker() when clicked  -->       
         <button onclick="speedChecker()">Detect</button>
-        <!-- paragraph element to display result from JS function -->             
+        
+
+<!-- paragraph element to display result from JS function -->             
         <p id="message"></p>
     </div>
     <script src="index.js"></script>
