Fixed string error in salary calculator

--- a/grade-generator.html
+++ b/grade-generator.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Grade Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/grade-generator.css">
 </head>
 
 <body>
@@ -18,9 +18,12 @@
         <button onclick="marksToGrades()">Generate</button>
 <!-- paragraph element with id = "grade" to display result from JS function-->          
         <p id="grade"></p>
+<!--Button linking to html file of the next program-->
+        <button>  <a href="speed-detector.html">Next</a> </button>
+
     </div>
     
-     <script src="index.js"></script> 
+     <script src="./js/grade-generator.js"></script> 
 </body>
 </html>        
         
