--- a/speed-detector.html
+++ b/speed-detector.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speed Detector</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/speed-detector.css">
 </head>
 <body>
     <div class="box">
@@ -15,11 +15,12 @@
         <input type="number" id = "speed" min="0" max="300">
 <!-- button that calls JS function speedChecker() when clicked  -->       
         <button onclick="speedChecker()">Detect</button>
-        
-
 <!-- paragraph element to display result from JS function -->             
         <p id="message"></p>
+<!--Button linking to html file of the next program-->
+        <button>  <a href="salary-calculator.html">Next</a> </button>
+
     </div>
-    <script src="index.js"></script>
+    <script src="./js/speed-detector.js"></script>
 </body>
 </html>
